# mtia

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  stopreason.py
modules/rag/: __init__.py  auth.py  chunker.py  embeddings.py  ingest.py  llm.py  retrieve.py  router.py  schemas.py  storage.py
modules/rag/tests/: conftest.py  test_chunker.py  test_ingest.py  test_ollama.py  test_retrieve.py  test_router.py  test_storage.py
modules/stopreason/: __init__.py  pipeline.py  router.py
